# advent_of_code

2024/: Cargo.toml
2024/common/: Cargo.toml
2024/common/src/: grid.rs  lib.rs
2024/daily_template/: Cargo.toml
2024/daily_template/benches/: benchmark.rs  benchmarks.rs
2024/daily_template/src/: lib.rs  part1.rs  part2.rs
2024/day-01/: Cargo.toml
2024/day-01/src/: lib.rs  part1.rs  part2.rs
2024/day-02/: Cargo.toml
2024/day-02/src/: lib.rs  part1.rs  part2.rs
2024/day-03/: Cargo.toml
2024/day-03/benches/: benchmark.rs  initial.txt  manual_parsing.txt
2024/day-03/src/: lib.rs  part1.rs  part2.rs
2024/day-04/: Cargo.toml
2024/day-04/benches/: bench.txt  benchmark.rs
2024/day-04/src/: lib.rs  part1.rs  part2.rs
2024/day-05/: Cargo.toml
2024/day-05/benches/: benchmarks.rs  is_sorted_by.txt
2024/day-05/src/: lib.rs  part1.rs  part2.rs
2024/day-06/: Cargo.toml
2024/day-06/benches/: benchmarks.rs
2024/day-06/src/: lib.rs  part1.rs  part2.rs
2024/day-07/: Cargo.toml
2024/day-07/benches/: benchmarks.rs  initial.txt  rayon.txt
2024/day-07/src/: lib.rs  part1.rs  part2.rs
2024/day-08/: Cargo.toml
2024/day-08/benches/: benchmarks.rs  initial.txt
2024/day-08/src/: lib.rs  part1.rs  part2.rs
2024/day-09/: Cargo.toml
2024/day-09/benches/: benchmarks.rs  failed_optimizations.txt  initial.txt  move_imediately.txt  partial_range.txt
2024/day-09/src/: lib.rs  part1.rs  part2.rs
2024/day-10/: Cargo.toml
2024/day-10/benches/: benchmarks.rs  dfs.txt  initial.txt  no_visited.txt
2024/day-10/src/: lib.rs  part1.rs  part2.rs
2024/day-11/: Cargo.toml
2024/day-11/benches/: benchmarks.rs  initial.txt  no_allocs_breadth_first.txt  refactor.txt  sum_and_str_free.txt
2024/day-11/src/: lib.rs  part1.rs  part2.rs
2024/day-12/: Cargo.toml
2024/day-12/benches/: benchmarks.rs  initial.txt  single_pass.txt
2024/day-12/src/: lib.rs  part1.rs  part2.rs
2024/day-13/: Cargo.toml
2024/day-13/benches/: benchmark.txt  benchmarks.rs
2024/day-13/src/: lib.rs  part1.rs  part2.rs
2024/day-14/: Cargo.toml
2024/day-14/benches/: benchmarks.rs  benchmarks.txt  initial.txt
2024/day-14/src/: lib.rs  part1.rs  part2.rs
2024/day-15/: Cargo.toml
2024/day-15/benches/: benchmarks.rs
2024/day-15/src/: lib.rs  part1.rs  part2.rs
2024/day-16/: Cargo.toml
2024/day-16/benches/: benchmarks.rs  bfs.txt  bfs_no_hashmap.txt  three_algos.txt
2024/day-16/src/: lib.rs  part1.rs  part2.rs
2024/day-17/: Cargo.toml
2024/day-17/benches/: benchmarks.rs  initial.txt  no_clone.txt
2024/day-17/src/: lib.rs  part1.rs  part2.rs
2024/day-18/: Cargo.toml
2024/day-18/benches/: benchmark.txt  benchmarks.rs  initial.txt
2024/day-18/src/: lib.rs  part1.rs  part2.rs
2024/day-19/: Cargo.toml  example.py
2024/day-19/benches/: benchmarks.rs  benchmarks.txt
2024/day-19/src/: array_trie.rs  hash_trie.rs  lib.rs  part1.rs  part2.rs
2024/day-20/: Cargo.toml
2024/day-20/benches/: benchmarks.rs  benchmarks.txt
2024/day-20/src/: lib.rs  part1.rs  part2.rs
2024/day-21/: Cargo.toml
2024/day-21/benches/: benchmarks.rs  benchmarks.txt
2024/day-21/src/: generalized.rs  idiomatic.rs  initial.rs  lib.rs  part1.rs  part2.rs
2024/day-22/: Cargo.toml
2024/day-22/benches/: benchmarks.rs  benchmarks.txt
2024/day-22/src/: lib.rs  part1.rs  part2.rs
2024/day-23/: Cargo.toml
2024/day-23/benches/: benchmarks.rs  benchmarks.txt  maneatingape.txt
2024/day-23/src/: array.rs  int.rs  lib.rs  part1.rs  part2.rs  string.rs
2024/day-24/: Cargo.toml
2024/day-24/benches/: benchmarks.rs  benchmarks.txt
2024/day-24/src/: lib.rs  part1.rs  part2.rs
2024/day-25/: Cargo.toml
2024/day-25/benches/: benchmarks.rs  benchmarks.txt
2024/day-25/src/: lib.rs  part1.rs  part2.rs
2025/: .gitignore  Cargo.toml
2025/common/src/: counter.rs  grid.rs  lib.rs  position_map.rs
2025/daily_template/benches/: benchmarks.rs
2025/daily_template/src/: lib.rs  part1.rs  part2.rs
2025/day-01/: Cargo.toml
2025/day-01/benches/: benchmarks.rs
2025/day-01/src/: lib.rs  part1.rs  part2.rs
2025/day-02/: Cargo.toml
2025/day-02/benches/: benchmarks.rs
2025/day-02/src/: lib.rs  part1.rs  part2.rs
2025/day-03/: Cargo.toml
2025/day-03/benches/: benchmarks.rs
2025/day-03/src/: lib.rs  part1.rs  part2.rs
2025/day-04/: Cargo.toml
2025/day-04/benches/: benchmarks.rs
2025/day-04/src/: lib.rs  part1.rs  part2.rs
2025/day-05/: Cargo.toml
2025/day-05/benches/: benchmarks.rs
2025/day-05/src/: lib.rs  part1.rs  part2.rs
2025/day-06/: Cargo.toml
2025/day-06/benches/: benchmarks.rs
2025/day-06/src/: lib.rs  part1.rs  part2.rs
2025/day-07/: Cargo.toml
2025/day-07/benches/: benchmarks.rs
2025/day-07/src/: lib.rs  part1.rs  part2.rs
2025/day-08/: Cargo.toml
2025/day-08/benches/: benchmarks.rs
2025/day-08/src/: lib.rs  part1.rs  part2.rs
2025/day-09/: Cargo.toml
2025/day-09/benches/: benchmarks.rs
2025/day-09/src/: lib.rs  part1.rs  part2.rs
2025/day-10/: Cargo.toml
2025/day-10/benches/: benchmarks.rs
2025/day-10/src/: lib.rs  part1.rs  part2.rs
2025/day-11/: Cargo.toml
2025/day-11/benches/: benchmarks.rs
2025/day-11/src/: lib.rs  part1.rs  part2.rs
2025/day-12/: Cargo.toml
2025/day-12/benches/: benchmarks.rs
2025/day-12/src/: lib.rs  part2.rs  process.rs
