[workspace]

members = [
  "common",
  "day-01", "day-02", "day-03", "day-04", "day-05", "day-06", "day-07",
  "day-08", "day-09", "day-10", "day-11", "day-12", "day-13", "day-14",
  "day-15", "day-16", "day-17", "day-18", "day-19", "day-20", "day-21",
  "day-22", "day-23", "day-24", "day-25"
]

resolver = "2"

[workspace.dependencies]
color-eyre = "0.6.3"
displaydoc = "0.2"
divan = "0.1.7"
fxhash = "0.2.1"
glam = "0.29"
indexmap = "2.7"
itertools = "0.12"
rayon = "1.10"
regex = "1.11"
rstest = "0.23.0"
tap = "1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "ansi"] }
tracing-error = "0.2"

common.path = "common"

[workspace.dependencies.image]
version = "0.25.5"
default-features = false
features = ["rayon", "bmp", "png", "jpeg"]


[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = { level = "forbid", priority = 1 }
enum_glob_use = { level = "deny", priority = 1 }
pedantic = "deny"
nursery = "warn"
todo = { level = "warn", priority = 1 }
dbg_macro = { level = "warn", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
cognitive_complexity = { level = "allow", priority = 1 }
perf = "warn"
style = "warn"
suspicious = "warn"
correctness = "deny"
single_match = { level = "allow", priority = 127}
single_match_else = { level = "allow", priority = 127}
manual_let_else = { level = "allow", priority = 127}
unused_async = { level = "warn", priority = 127 }

# [profile.release]
# opt-level = "z"
# lto = true
# codegen-units = 1
# panic = "abort"
# strip = "symbols"

