[package]
name = "day-01"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre.workspace = true
displaydoc.workspace = true
itertools.workspace = true
tap.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-error.workspace = true

common.workspace = true


[lints]
workspace = true
