[package]
name = "day-03"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre.workspace = true
displaydoc.workspace = true
itertools.workspace = true
regex.workspace = true
tap.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-error.workspace = true

common.workspace = true

[dev-dependencies]
divan.workspace = true


[lints]
workspace = true

[[bench]]
name = "day-03-bench"
path = "benches/benchmark.rs"
harness = false
